Fix alignment issue & Seaweed out!

--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,6 @@ h2 {
     color: #fff;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     margin: 10px;
     width: fit-content;
     padding: 20px;
